service-app2.yaml
# Alternatively you can create a pod and expose it which will create the below service automatically
#  kubectl run get --expose --image nginxdemos/hello --port 80
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: hello
status:
  loadBalancer: {}
